Added new fields to ToDo: description, createdAt, deadline
